--- a/Copy_of_Math_242_solve_systems_using_computation_and_rref.ipynb
+++ b/Copy_of_Math_242_solve_systems_using_computation_and_rref.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "ll = \"loaded\""
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b324dee8-a3ba-42cf-a121-62cc54320178"
+        "outputId": "1168fcdd-4f47-4eac-927c-0d35556e7f9c"
       },
       "source": [
         "lll = \" correctly!\"\n",
@@ -95,7 +95,7 @@
         "\n",
         "print(\">> The page \", ll, lll)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         "# create the vector for the right hand side:\n",
         "b = np.matrix([[-1], [2], [1]])"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -178,12 +178,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39c42ad1-47d8-4aad-d067-4d9b5dce31d7"
+        "outputId": "2503ade4-71be-4191-f986-a9bb68bd5420"
       },
       "source": [
         "print(A)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,13 +217,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "172289e1-554e-40ac-8190-a7ae906cb9c0"
+        "outputId": "8270687c-245d-4313-a9e3-ccf719979640"
       },
       "source": [
         "M = np.c_[A,b]\n",
         "print(M)"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,12 +258,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4e2ee10-ee44-435f-94c7-8ab0cbbab196"
+        "outputId": "8db39c1b-9e66-4209-96a3-3bf2a99d6d6e"
       },
       "source": [
         "print(rref(M))"
       ],
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +384,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c48c545-0ca6-449c-f1e4-77e59044e7bb"
+        "outputId": "9f809ae5-6e44-4648-d24f-96b0d8edea8f"
       },
       "source": [
         "# create the matrix:\n",
@@ -396,7 +396,7 @@
         "M = np.c_[A,b]\n",
         "print(rref(M))"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,13 +424,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rgpL6ig2-QJf"
+        "id": "rgpL6ig2-QJf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "08173137-a2b0-4275-d278-99d79344b8a3"
       },
       "source": [
-        ""
+        "# create the matrix:\n",
+        "A = np.matrix([[-1, 1],\n",
+        "               [1, 1]])\n",
+        " \n",
+        "# create the vector for the right hand side:\n",
+        "b = np.matrix([[1], [2]])\n",
+        "M = np.c_[A,b]\n",
+        "print(rref(M))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1.  0.  0.5]\n",
+            " [0.  1.  1.5]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -448,13 +468,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Fm9M0Pg-S_F"
+        "id": "4Fm9M0Pg-S_F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2f119b6-b8eb-4b54-8f73-57d3ed77c3b8"
       },
       "source": [
-        ""
+        "# create the matrix:\n",
+        "A = np.matrix([[1, -3, 1],\n",
+        "               [1, 1, 2]])\n",
+        " \n",
+        "# create the vector for the right hand side:\n",
+        "b = np.matrix([[1], [14]])\n",
+        "M = np.c_[A,b]\n",
+        "print(rref(M))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1.    0.    1.75 10.75]\n",
+            " [-0.    1.    0.25  3.25]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -472,13 +512,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aoJNak7k-VlQ"
+        "id": "aoJNak7k-VlQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1444a69-c458-42f3-eb54-acd68fa2c3fe"
       },
       "source": [
-        ""
+        "# create the matrix:\n",
+        "A = np.matrix([[-1, -1],\n",
+        "               [-3, -3]])\n",
+        " \n",
+        "# create the vector for the right hand side:\n",
+        "b = np.matrix([[1], [2]])\n",
+        "M = np.c_[A,b]\n",
+        "print(rref(M))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 1. 0.]\n",
+            " [0. 0. 1.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -495,13 +555,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "98NNaKMX-Xiq"
+        "id": "98NNaKMX-Xiq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8dd53de1-e808-4a11-fe4d-f2f075761d59"
       },
       "source": [
-        ""
+        "# create the matrix:\n",
+        "A = np.matrix([[0, 4, 1],\n",
+        "               [2, -2, 1],\n",
+        "               [1, 0, 1],\n",
+        "               [1, 1, -1]])\n",
+        " \n",
+        "# create the vector for the right hand side:\n",
+        "b = np.matrix([[20], [0], [5], [10]])\n",
+        "M = np.c_[A,b]\n",
+        "print(rref(M))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 0. 0. 5.]\n",
+            " [0. 1. 0. 5.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 0. 0.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -519,13 +603,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r3WB6JRn-b5W"
+        "id": "r3WB6JRn-b5W",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e022bd5a-2ca8-4d25-a633-23d4da980fc4"
       },
       "source": [
-        ""
+        "# create the matrix:\n",
+        "A = np.matrix([[2, 0, 1, 1],\n",
+        "               [0, 1, 0, -1],\n",
+        "               [3, 0, -1, -1],\n",
+        "               [4, 1, 2, 1]])\n",
+        " \n",
+        "# create the vector for the right hand side:\n",
+        "b = np.matrix([[5], [-1], [0], [9]])\n",
+        "M = np.c_[A,b]\n",
+        "print(rref(M))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1.  0.  0.  0.  1.]\n",
+            " [-0.  1.  0. -1. -1.]\n",
+            " [-0. -0.  1.  1.  3.]\n",
+            " [ 0.  0.  0.  0.  0.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
