--- a/Copy_of_Sports_Teams_Rankings.ipynb
+++ b/Copy_of_Sports_Teams_Rankings.ipynb
@@ -59,7 +59,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8e6251c3-b4e9-4c68-ee3a-145bfc58a32c"
+        "outputId": "800ea6e0-736f-434b-8362-b20d6a9ba54f"
       },
       "source": [
         "lll = \" correctly!\"\n",
@@ -169,7 +169,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3894a179-dd45-4b57-a4df-6f47f95a0f4f"
+        "outputId": "738788cd-011e-4e38-af96-f0f53d603166"
       },
       "source": [
         "# create the matrix:\n",
@@ -208,7 +208,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfafd425-ccc2-4ab9-b4d7-217dbc8b20d7"
+        "outputId": "fd027f44-de48-4520-ebf5-5079e6a8a9d5"
       },
       "source": [
         "# Generate the transpose of M:\n",
@@ -273,7 +273,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f08d2475-0c9a-4e1a-9772-7363e7a6b477"
+        "outputId": "4249be12-d658-4515-eecd-e231bea44104"
       },
       "source": [
         "#  Check if MTM is singular\n",
@@ -300,7 +300,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c2ec6a0a-9088-4ea4-becf-6626561d1da6"
+        "outputId": "a7fff183-5c63-48cb-a90b-590aa4305ef8"
       },
       "source": [
         "# If MTM is singular, then adjust one row of MTM and MT pts to be just 1's:\n",
@@ -358,7 +358,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c094a446-4a3b-4dbf-bd8c-f37a05651a39"
+        "outputId": "cab0829a-e968-48a2-fe14-77921e9e2f18"
       },
       "source": [
         "#Find our solution using the inverse of MTM:\n",
@@ -440,30 +440,66 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RrMkbXIC5v_X"
+        "id": "RrMkbXIC5v_X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "828de682-bc13-469c-d4ce-b5bee77a154f"
       },
       "source": [
         "# create the matrix:\n",
-        "M = np.matrix([[1, -1, 0, 0],\n",
-        "               [1, 0, -1, 0],\n",
-        "               [0, 1, -1, 0],\n",
-        "               [0, 0, -1, 1],\n",
-        "               [-1, 0, 0, 1]])\n",
+        "M = np.matrix([[1, 0, -1, 0, 0, 0, 0, 0, 0],\n",
+        "               [-1, 0, 0, 1, 0, 0, 0, 0, 0],\n",
+        "               [0, 0, 0, -1, 0, 0, 0, 1, 0],\n",
+        "               [0, 0, -1, 1, 0, 0, 0, 0, 0],\n",
+        "               [0, 1, -1, 0, 0, 0, 0, 0, 0],\n",
+        "               [0, 1, 0, 0, 0, 0, -1, 0, 0],\n",
+        "               [0, 0, 0, 0, 1, -1, 0, 0, 0],\n",
+        "               [0, 0, 0, 0, 0, 0, 1, -1, 0],\n",
+        "               [0, 0, 0, 0, -1, 0, 0, 0, 1],\n",
+        "               [0, -1, 0, 0, 0, 0, 0, 0, 1],\n",
+        "               [1, 0, 0, 0, 0, 0, 0, 0, -1],\n",
+        "               [0, 0, 0, 1, 0, 0, 0, 0, -1],\n",
+        "               [0, 0, -1, 0, 0, 0, 0, 0, 1]])\n",
         "\n",
         "\n",
         "# create the vector for the right hand side:\n",
-        "pts = np.matrix([[1], [14], [38], [11], [20]])\n",
+        "pts = np.matrix([[10], [10], [35], [18], [2], [6], [23], [19], [5], [3], [3], [3], [23]])\n",
         " \n",
         "#Make sure the system looks appropriate:\n",
         "print(np.c_[M,pts])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  0 -1  0  0  0  0  0  0 10]\n",
+            " [-1  0  0  1  0  0  0  0  0 10]\n",
+            " [ 0  0  0 -1  0  0  0  1  0 35]\n",
+            " [ 0  0 -1  1  0  0  0  0  0 18]\n",
+            " [ 0  1 -1  0  0  0  0  0  0  2]\n",
+            " [ 0  1  0  0  0  0 -1  0  0  6]\n",
+            " [ 0  0  0  0  1 -1  0  0  0 23]\n",
+            " [ 0  0  0  0  0  0  1 -1  0 19]\n",
+            " [ 0  0  0  0 -1  0  0  0  1  5]\n",
+            " [ 0 -1  0  0  0  0  0  0  1  3]\n",
+            " [ 1  0  0  0  0  0  0  0 -1  3]\n",
+            " [ 0  0  0  1  0  0  0  0 -1  3]\n",
+            " [ 0  0 -1  0  0  0  0  0  1 23]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TLLB3Ebe587M"
+        "id": "TLLB3Ebe587M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "44b87396-868e-48bc-e28e-6a036128a41e"
       },
       "source": [
         "# Generate the transpose of M:\n",
@@ -483,25 +519,86 @@
         "MTpts = MT * pts\n",
         "print(MTpts)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Transpose of M is:\n",
+            "[[ 1 -1  0  0  0  0  0  0  0  0  1  0  0]\n",
+            " [ 0  0  0  0  1  1  0  0  0 -1  0  0  0]\n",
+            " [-1  0  0 -1 -1  0  0  0  0  0  0  0 -1]\n",
+            " [ 0  1 -1  1  0  0  0  0  0  0  0  1  0]\n",
+            " [ 0  0  0  0  0  0  1  0 -1  0  0  0  0]\n",
+            " [ 0  0  0  0  0  0 -1  0  0  0  0  0  0]\n",
+            " [ 0  0  0  0  0 -1  0  1  0  0  0  0  0]\n",
+            " [ 0  0  1  0  0  0  0 -1  0  0  0  0  0]\n",
+            " [ 0  0  0  0  0  0  0  0  1  1 -1 -1  1]]\n",
+            "\n",
+            "\n",
+            "MT * M is: \n",
+            "[[ 3  0 -1 -1  0  0  0  0 -1]\n",
+            " [ 0  3 -1  0  0  0 -1  0 -1]\n",
+            " [-1 -1  4 -1  0  0  0  0 -1]\n",
+            " [-1  0 -1  4  0  0  0 -1 -1]\n",
+            " [ 0  0  0  0  2 -1  0  0 -1]\n",
+            " [ 0  0  0  0 -1  1  0  0  0]\n",
+            " [ 0 -1  0  0  0  0  2 -1  0]\n",
+            " [ 0  0  0 -1  0  0 -1  2  0]\n",
+            " [-1 -1 -1 -1 -1  0  0  0  5]]\n",
+            "\n",
+            "\n",
+            "MT * pts is:\n",
+            "[[  3]\n",
+            " [  5]\n",
+            " [-53]\n",
+            " [ -4]\n",
+            " [ 18]\n",
+            " [-23]\n",
+            " [ 13]\n",
+            " [ 16]\n",
+            " [ 25]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VXqKSDj06BVa"
+        "id": "VXqKSDj06BVa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0bf4d2c8-f099-44e5-d7d0-f2f7133d7fa8"
       },
       "source": [
         "#  Check if MTM is singular\n",
         "is_singular(MT*M)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5E2eXRT76MQh"
+        "id": "5E2eXRT76MQh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 351
+        },
+        "outputId": "17c25026-ba45-480b-a470-e4f2fcc3d2d4"
       },
       "source": [
         "# Careful - you might not need to do this!  \n",
@@ -512,8 +609,8 @@
         "#MTM[3] is the entire 4th row of MTM, \n",
         "#so MTM[3] = 1 will put 1's in MTM's 4th row.\n",
         "\n",
-        "MTM[3] = 1\n",
-        "MTpts[3] = 1\n",
+        "MTM[12] = 1\n",
+        "MTpts[12] = 1\n",
         "\n",
         "print(\"MTM is now: \")\n",
         "print(MTM)\n",
@@ -524,13 +621,30 @@
         "print(\"Is our modified MTM singular?\")\n",
         "is_singular(MTM)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-28-14f3eded25f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#so MTM[3] = 1 will put 1's in MTM's 4th row.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mMTM\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mMTpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/matrixlib/defmatrix.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m    191\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 193\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    194\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: index 12 is out of bounds for axis 0 with size 9"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UkDKmNba6YHi"
+        "id": "UkDKmNba6YHi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7040b80-7b47-4871-e26f-171ee14085ec"
       },
       "source": [
         "#Find our solution using the inverse of MTM:\n",
@@ -547,8 +661,55 @@
         "print(\"The solution are rankings:\")\n",
         "MTMI * MTpts"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The inverse of MTM is:\n",
+            "[[ 0.43369176  0.03942652  0.15483871  0.14695341 -0.11182796 -0.22293907\n",
+            "  -0.03584229  0.11111111  0.11039427]\n",
+            " [-0.01792115  0.36200717  0.05806452 -0.01433692 -0.20860215 -0.31971326\n",
+            "   0.12544803  0.11111111  0.01362007]\n",
+            " [ 0.14336918  0.10394265  0.33548387  0.11469534 -0.1311828  -0.24229391\n",
+            "  -0.00358423  0.11111111  0.09103943]\n",
+            " [ 0.01433692 -0.08960573 -0.00645161  0.21146953 -0.27311828 -0.38422939\n",
+            "  -0.10035842  0.11111111 -0.05089606]\n",
+            " [ 0.14336918  0.10394265  0.13548387  0.11469534  1.0688172   0.95770609\n",
+            "  -0.00358423  0.11111111  0.29103943]\n",
+            " [ 0.14336918  0.10394265  0.13548387  0.11469534  1.0688172   1.95770609\n",
+            "  -0.00358423  0.11111111  0.29103943]\n",
+            " [-0.34050179 -0.1218638  -0.29677419 -0.27240143 -0.56344086 -0.67455197\n",
+            "   0.38351254  0.11111111 -0.34121864]\n",
+            " [-0.66308244 -0.60573477 -0.6516129  -0.53046595 -0.91827957 -1.02939068\n",
+            "  -0.35842294  0.11111111 -0.69605735]\n",
+            " [ 0.14336918  0.10394265  0.13548387  0.11469534  0.0688172  -0.04229391\n",
+            "  -0.00358423  0.11111111  0.29103943]]\n",
+            "\n",
+            "\n",
+            "The solution are rankings:\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "matrix([[ -1.77634409],\n",
+              "        [  4.4172043 ],\n",
+              "        [-11.73763441],\n",
+              "        [  0.54623656],\n",
+              "        [ -2.13763441],\n",
+              "        [-25.13763441],\n",
+              "        [ 17.12688172],\n",
+              "        [ 16.83655914],\n",
+              "        [  2.86236559]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     }
   ]
 }
