--- a/Copy_of_Sports_Teams_Rankings.ipynb
+++ b/Copy_of_Sports_Teams_Rankings.ipynb
@@ -49,7 +49,7 @@
         "\n",
         "ll = \"loaded\""
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "800ea6e0-736f-434b-8362-b20d6a9ba54f"
+        "outputId": "fcdc5436-ea69-4488-b9a0-14a00f3c038e"
       },
       "source": [
         "lll = \" correctly!\"\n",
@@ -114,7 +114,7 @@
         "\n",
         "print(\">> The page \", ll, lll)"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "738788cd-011e-4e38-af96-f0f53d603166"
+        "outputId": "ce0f665a-49b5-41a0-aaa7-89857a8e26e4"
       },
       "source": [
         "# create the matrix:\n",
@@ -186,7 +186,7 @@
         "#Make sure the system looks appropriate:\n",
         "print(np.c_[M,pts])"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd027f44-de48-4520-ebf5-5079e6a8a9d5"
+        "outputId": "8054d068-8c24-4fea-ea2c-c0c244794c5a"
       },
       "source": [
         "# Generate the transpose of M:\n",
@@ -228,7 +228,7 @@
         "MTpts = MT * pts\n",
         "print(MTpts)\n"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,13 +273,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4249be12-d658-4515-eecd-e231bea44104"
+        "outputId": "2add6d3e-56b8-4c84-ba40-27550f5293ad"
       },
       "source": [
         "#  Check if MTM is singular\n",
         "is_singular(MT*M)"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -300,7 +300,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7fff183-5c63-48cb-a90b-590aa4305ef8"
+        "outputId": "b6c3b220-32b2-4929-eb62-75d42528097d"
       },
       "source": [
         "# If MTM is singular, then adjust one row of MTM and MT pts to be just 1's:\n",
@@ -320,7 +320,7 @@
         "print(\"Is our modified MTM singular?\")\n",
         "is_singular(MTM)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -358,7 +358,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cab0829a-e968-48a2-fe14-77921e9e2f18"
+        "outputId": "47941199-17f5-4bb7-8a4e-72d04565b8f3"
       },
       "source": [
         "#Find our solution using the inverse of MTM:\n",
@@ -375,7 +375,7 @@
         "print(\"The solution are rankings:\")\n",
         "MTMI * MTpts"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -444,7 +444,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "828de682-bc13-469c-d4ce-b5bee77a154f"
+        "outputId": "37769c64-bc04-474c-eec2-6ea5583cbf62"
       },
       "source": [
         "# create the matrix:\n",
@@ -456,6 +456,7 @@
         "               [0, 1, 0, 0, 0, 0, -1, 0, 0],\n",
         "               [0, 0, 0, 0, 1, -1, 0, 0, 0],\n",
         "               [0, 0, 0, 0, 0, 0, 1, -1, 0],\n",
+        "               \n",
         "               [0, 0, 0, 0, -1, 0, 0, 0, 1],\n",
         "               [0, -1, 0, 0, 0, 0, 0, 0, 1],\n",
         "               [1, 0, 0, 0, 0, 0, 0, 0, -1],\n",
@@ -469,7 +470,7 @@
         "#Make sure the system looks appropriate:\n",
         "print(np.c_[M,pts])"
       ],
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +500,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "44b87396-868e-48bc-e28e-6a036128a41e"
+        "outputId": "d22997b2-b460-4290-a6fe-72fa5124c138"
       },
       "source": [
         "# Generate the transpose of M:\n",
@@ -519,7 +520,7 @@
         "MTpts = MT * pts\n",
         "print(MTpts)\n"
       ],
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,13 +571,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bf4d2c8-f099-44e5-d7d0-f2f7133d7fa8"
+        "outputId": "d680a7f3-e66a-474e-e5a4-1a48f8dd4278"
       },
       "source": [
         "#  Check if MTM is singular\n",
         "is_singular(MT*M)"
       ],
-      "execution_count": 26,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 12
         }
       ]
     },
@@ -595,10 +596,9 @@
       "metadata": {
         "id": "5E2eXRT76MQh",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 351
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "17c25026-ba45-480b-a470-e4f2fcc3d2d4"
+        "outputId": "aef90a94-2f0a-4c07-faf8-0789ed37b5ba"
       },
       "source": [
         "# Careful - you might not need to do this!  \n",
@@ -609,8 +609,8 @@
         "#MTM[3] is the entire 4th row of MTM, \n",
         "#so MTM[3] = 1 will put 1's in MTM's 4th row.\n",
         "\n",
-        "MTM[12] = 1\n",
-        "MTpts[12] = 1\n",
+        "MTM[8] = 1\n",
+        "MTpts[8] = 1\n",
         "\n",
         "print(\"MTM is now: \")\n",
         "print(MTM)\n",
@@ -621,19 +621,44 @@
         "print(\"Is our modified MTM singular?\")\n",
         "is_singular(MTM)"
       ],
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-28-14f3eded25f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#so MTM[3] = 1 will put 1's in MTM's 4th row.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mMTM\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mMTpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/matrixlib/defmatrix.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m    191\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 193\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    194\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: index 12 is out of bounds for axis 0 with size 9"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MTM is now: \n",
+            "[[ 3  0 -1 -1  0  0  0  0 -1]\n",
+            " [ 0  3 -1  0  0  0 -1  0 -1]\n",
+            " [-1 -1  4 -1  0  0  0  0 -1]\n",
+            " [-1  0 -1  4  0  0  0 -1 -1]\n",
+            " [ 0  0  0  0  2 -1  0  0 -1]\n",
+            " [ 0  0  0  0 -1  1  0  0  0]\n",
+            " [ 0 -1  0  0  0  0  2 -1  0]\n",
+            " [ 0  0  0 -1  0  0 -1  2  0]\n",
+            " [ 1  1  1  1  1  1  1  1  1]]\n",
+            "and MTpts is now:\n",
+            "[[  3]\n",
+            " [  5]\n",
+            " [-53]\n",
+            " [ -4]\n",
+            " [ 18]\n",
+            " [-23]\n",
+            " [ 13]\n",
+            " [ 16]\n",
+            " [  1]]\n",
+            "Is our modified MTM singular?\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
@@ -644,7 +669,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7040b80-7b47-4871-e26f-171ee14085ec"
+        "outputId": "bde2d185-7858-4605-bb25-a391df79b93d"
       },
       "source": [
         "#Find our solution using the inverse of MTM:\n",
@@ -661,31 +686,40 @@
         "print(\"The solution are rankings:\")\n",
         "MTMI * MTpts"
       ],
-      "execution_count": 29,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The inverse of MTM is:\n",
-            "[[ 0.43369176  0.03942652  0.15483871  0.14695341 -0.11182796 -0.22293907\n",
-            "  -0.03584229  0.11111111  0.11039427]\n",
-            " [-0.01792115  0.36200717  0.05806452 -0.01433692 -0.20860215 -0.31971326\n",
-            "   0.12544803  0.11111111  0.01362007]\n",
-            " [ 0.14336918  0.10394265  0.33548387  0.11469534 -0.1311828  -0.24229391\n",
-            "  -0.00358423  0.11111111  0.09103943]\n",
-            " [ 0.01433692 -0.08960573 -0.00645161  0.21146953 -0.27311828 -0.38422939\n",
-            "  -0.10035842  0.11111111 -0.05089606]\n",
-            " [ 0.14336918  0.10394265  0.13548387  0.11469534  1.0688172   0.95770609\n",
-            "  -0.00358423  0.11111111  0.29103943]\n",
-            " [ 0.14336918  0.10394265  0.13548387  0.11469534  1.0688172   1.95770609\n",
-            "  -0.00358423  0.11111111  0.29103943]\n",
-            " [-0.34050179 -0.1218638  -0.29677419 -0.27240143 -0.56344086 -0.67455197\n",
-            "   0.38351254  0.11111111 -0.34121864]\n",
-            " [-0.66308244 -0.60573477 -0.6516129  -0.53046595 -0.91827957 -1.02939068\n",
-            "  -0.35842294  0.11111111 -0.69605735]\n",
-            " [ 0.14336918  0.10394265  0.13548387  0.11469534  0.0688172  -0.04229391\n",
-            "  -0.00358423  0.11111111  0.29103943]]\n",
+            "[[ 3.23297491e-01 -7.09677419e-02  4.44444444e-02  3.65591398e-02\n",
+            "  -2.22222222e-01 -3.33333333e-01 -1.46236559e-01 -1.10394265e-01\n",
+            "   1.11111111e-01]\n",
+            " [-3.15412186e-02  3.48387097e-01  4.44444444e-02 -2.79569892e-02\n",
+            "  -2.22222222e-01 -3.33333333e-01  1.11827957e-01 -1.36200717e-02\n",
+            "   1.11111111e-01]\n",
+            " [ 5.23297491e-02  1.29032258e-02  2.44444444e-01  2.36559140e-02\n",
+            "  -2.22222222e-01 -3.33333333e-01 -9.46236559e-02 -9.10394265e-02\n",
+            "   1.11111111e-01]\n",
+            " [ 6.52329749e-02 -3.87096774e-02  4.44444444e-02  2.62365591e-01\n",
+            "  -2.22222222e-01 -3.33333333e-01 -4.94623656e-02  5.08960573e-02\n",
+            "   1.11111111e-01]\n",
+            " [-1.47670251e-01 -1.87096774e-01 -1.55555556e-01 -1.76344086e-01\n",
+            "   7.77777778e-01  6.66666667e-01 -2.94623656e-01 -2.91039427e-01\n",
+            "   1.11111111e-01]\n",
+            " [-1.47670251e-01 -1.87096774e-01 -1.55555556e-01 -1.76344086e-01\n",
+            "   7.77777778e-01  1.66666667e+00 -2.94623656e-01 -2.91039427e-01\n",
+            "   1.11111111e-01]\n",
+            " [ 7.16845878e-04  2.19354839e-01  4.44444444e-02  6.88172043e-02\n",
+            "  -2.22222222e-01 -3.33333333e-01  7.24731183e-01  3.41218638e-01\n",
+            "   1.11111111e-01]\n",
+            " [ 3.29749104e-02  9.03225806e-02  4.44444444e-02  1.65591398e-01\n",
+            "  -2.22222222e-01 -3.33333333e-01  3.37634409e-01  6.96057348e-01\n",
+            "   1.11111111e-01]\n",
+            " [-1.47670251e-01 -1.87096774e-01 -1.55555556e-01 -1.76344086e-01\n",
+            "  -2.22222222e-01 -3.33333333e-01 -2.94623656e-01 -2.91039427e-01\n",
+            "   1.11111111e-01]]\n",
             "\n",
             "\n",
             "The solution are rankings:\n"
@@ -707,7 +741,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 16
         }
       ]
     }
